--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     </div>
     <div class="container hereo">
       <h2>
-        <img src="nemo2.png" alt="" width="50px" />Result<img
+        <img src="nemo2.png" alt="nemo" width="50px" />Result<img
           src="nemo.png"
-          alt=""
+          alt="nemo"
           width="50px"
         />
       </h2>
